Hot fix: tweak one feature callout widget CSS prop
This fixes a styling bug where the icon and the widget didn't align when viewing in Spanish.

--- a/client/src/styles/FeatureCalloutWidget.scss
+++ b/client/src/styles/FeatureCalloutWidget.scss
@@ -46,7 +46,7 @@
     display: inline-block;
     position: absolute;
     top: 3em;
-    right: 7%;
+    right: 9%;
     z-index: 52;
     width: 300px;
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.9);
